// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Editor/> should call the correct callbacks when removing a button 1`] = `
[
  [
    "some.template.meta.custom.buttons",
  ],
]
`;

exports[`<Editor/> should call the correct callbacks when removing a button 2`] = `
[
  [
    [
      {
        "action": {
          "body": {
            "application/json": {},
            "application/x-www-form-urlencoded": [],
            "contentType": "application/json",
          },
          "headers": [],
          "method": "GET",
          "params": [],
          "url": "www.someurl.com",
        },
        "label": "I am in snapshots",
      },
    ],
  ],
]
`;

exports[`<Editor/> should call the correct callbacks when removing a button 3`] = `
[
  [
    "some.template.meta.custom.buttons",
    [
      "some",
      "absolute",
      "template",
    ],
  ],
]
`;

exports[`<Editor/> should call the correct callbacks when submitting a edited button 1`] = `
[
  [
    "some.template.meta.custom.buttons",
  ],
]
`;

exports[`<Editor/> should call the correct callbacks when submitting a edited button 2`] = `
[
  [
    [
      {
        "action": {
          "body": {
            "application/json": {},
            "application/x-www-form-urlencoded": [],
            "contentType": "application/json",
          },
          "headers": [],
          "method": "GET",
          "params": [],
          "url": "www.someurl.com",
        },
        "label": "I am in snapshots",
      },
      {
        "action": {
          "body": {
            "application/json": {},
            "application/x-www-form-urlencoded": [],
            "contentType": "application/json",
          },
          "headers": [],
          "method": "GET",
          "params": [],
          "url": "www.someurl.com",
        },
        "label": "I am in snapshots too",
      },
    ],
  ],
]
`;

exports[`<Editor/> should call the correct callbacks when submitting a new button 1`] = `[]`;

exports[`<Editor/> should call the correct callbacks when submitting a new button 2`] = `[]`;

exports[`<Editor/> should render with buttons and "add button" button 1`] = `
<div>
  <ul
    class="editList"
  >
    <li
      class="editRow"
    >
      <button
        aria-disabled="false"
        class="wrapper fill secondary small"
        type="button"
      >
        <span
          class="content"
        >
          I am in snapshots
        </span>
      </button>
      <span
        class="customActionEditIcons"
      >
        <i
          class="material-icons"
        >
          edit
        </i>
        <i
          class="material-icons text-danger"
        >
          delete
        </i>
      </span>
    </li>
    <li
      class="editRow"
    >
      <button
        aria-disabled="false"
        class="wrapper fill secondary small"
        type="button"
      >
        <span
          class="content"
        >
          I am in snapshots too
        </span>
      </button>
      <span
        class="customActionEditIcons"
      >
        <i
          class="material-icons"
        >
          edit
        </i>
        <i
          class="material-icons text-danger"
        >
          delete
        </i>
      </span>
    </li>
  </ul>
  <button
    aria-disabled="false"
    class="wrapper addButton fill secondary small"
    type="button"
  >
    <span
      class="content"
    >
      <span
        class="wrapper"
      >
        <i
          class="material-icons icon isLeft small"
        >
          add
        </i>
      </span>
      Add Button
    </span>
  </button>
</div>
`;
